25dim space and Gaussian mapping

--- a/final_project/words2midi/Example_embedding2midi.ipynb
+++ b/final_project/words2midi/Example_embedding2midi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,54 +28,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def colapse_into_10(space_50d):\n",
+    "def colapse_into_25(space_50d):\n",
     "    ndim = space_50d.ndim\n",
     "    if ndim == 1:  # If a word embedding\n",
-    "        space_10d = np.zeros(10)\n",
-    "        for idx in range(10):\n",
-    "            space_10d[idx] = np.sum(space_50d[idx*5:(idx+1)*5])\n",
+    "        space_25d = np.zeros(25)\n",
+    "        for idx in range(25):\n",
+    "            space_25d[idx] = np.sum(space_50d[idx*2:(idx+1)*2])\n",
     "    else:\n",
-    "        space_10d = np.zeros([space_50d.shape[0], 10])\n",
-    "        for idx in range(10):\n",
-    "            space_10d[idx] = np.sum(space_50d[idx*5:(idx+1)*5],)\n",
-    "    return space_10d"
+    "        space_25d = np.zeros([space_50d.shape[0], 25])\n",
+    "        for idx in range(25):\n",
+    "            space_25d[idx] = np.sum(space_50d[idx*2:(idx+1)*2],)\n",
+    "    return space_25d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "def embspace_to_midi(word_embedding, n_words):\n",
     "    \"\"\"\n",
-    "    word_embedding: The 50dim vector resulting of difference between multiple words embedding\n",
-    "    n_words: Number of words used to create the word_embedding\n",
+    "        word_embedding: The 50dim vector resulting of difference between multiple words embedding\n",
+    "        n_words: Number of words used to create the word_embedding\n",
     "    \"\"\"\n",
-    "    embedding = np.load('mappings.npy')\n",
-    "    reduced_10 = colapse_into_10(embedding)\n",
-    "    maxs = np.max(reduced_10, axis=0)*n_words\n",
-    "    mins = np.min(reduced_10, axis=0)*n_words\n",
+    "    embedding = np.load('./mappings.npy')\n",
+    "    reduced_25 = colapse_into_25(embedding)\n",
+    "    maxs = np.max(reduced_25, axis=0)*n_words\n",
+    "    mins = np.min(reduced_25, axis=0)*n_words\n",
     "    steps = (maxs - mins) / 129\n",
     "    mappings = np.array(list((map(np.arange, mins, maxs, steps))))\n",
     "\n",
-    "    reduced_embedding = colapse_into_10(word_embedding)\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "    midi = np.zeros(10)\n",
-    "    for dimension in range(10):\n",
+    "    reduced_embedding = colapse_into_25(word_embedding)\n",
+    "        \n",
+    "    midi = np.zeros(25)\n",
+    "    for dimension in range(25):\n",
     "        midi[dimension] = find_range(reduced_embedding[dimension], mappings[dimension])\n",
     "    return midi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,18 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "7190.0\n",
-      "8105.0\n",
-      "5477.0\n",
-      "5260.0\n"
-     ]
+     "text": "44751.0\n46745.0\n41112.0\n40767.0\n"
     }
    ],
    "source": [
@@ -138,18 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "[28. 27. 19. 23. 20. 31. 22. 22. 33. 37.]\n",
-      "[28. 27. 28. 22. 26. 28. 30. 28. 34. 32.]\n",
-      "[32. 18.  6. 23. 27. 12. 19. 23. 24. 35.]\n",
-      "[32. 22. 11. 25. 32. 10. 23. 13. 28. 20.]\n"
-     ]
+     "text": "[42. 45. 45. 39. 43. 35. 42. 39. 43. 38. 38. 39. 39. 47. 46. 33. 40. 46.\n 41. 40. 46. 46. 45. 49. 47.]\n[42. 42. 46. 41. 43. 41. 44. 42. 42. 37. 43. 42. 39. 45. 44. 38. 46. 48.\n 44. 42. 46. 45. 46. 45. 46.]\n[44. 47. 45. 43. 29. 26. 39. 32. 43. 39. 44. 41. 33. 37. 40. 50. 24. 38.\n 48. 37. 46. 40. 35. 44. 54.]\n[43. 50. 46. 38. 35. 35. 35. 39. 39. 41. 48. 39. 30. 36. 44. 55. 28. 31.\n 46. 31. 49. 43. 34. 35. 45.]\n"
     }
    ],
    "source": [
@@ -176,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.5-final"
   },
   "varInspector": {
    "cols": {
